<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="subtotal">Subtotal:</string>

    <string name="tip_amt_details">Tip Amount:</string>
    <string name="total_with_tip_details">Total with Tip:</string>
    <string name="guests_details">Guests:</string>
    <string name="next_details">Next</string>
    <string name="subtotal_with_tip_total">Subtotal plus tip:</string>
    <string name="round_down_button_total">Round Down</string>
    <string name="round_up_button_total">Round Up</string>
    <string name="each_person_owes_total">Each person owes:</string>
    <string name="credits">By Jacob Gerega</string>


    <string-array name="guests">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
