<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_margin="15dp"
        android:id="@+id/subtotal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$100.00"
        android:textSize="30sp"
        android:layout_toRightOf="@id/subtotal"
        android:layout_marginTop="15dp"
        android:id="@+id/subtotal_amt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zero_percent"
        android:text="0%"
        android:textSize="20sp"
        android:layout_below="@id/subtotal"
        android:layout_marginLeft="15dp"/>
    <SeekBar
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/zero_percent"
        android:paddingTop="5dp"
        android:paddingBottom="16dp"
        android:layout_below="@id/subtotal"
        android:max="30"
        android:id="@+id/percent_seek"
        android:progress="0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thirty_percent"
        android:text="30%"
        android:textSize="20sp"
        android:layout_below="@id/subtotal"
        android:layout_toRightOf="@id/percent_seek" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="36dp"
        android:layout_below="@id/percent_seek"
        android:id="@+id/percent_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10%"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginRight="9dp"
            android:id="@+id/ten_percent_button"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15%"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginRight="9dp"
            android:id="@+id/fifteen_percent_button"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18%"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginRight="9dp"
            android:id="@+id/eighteen_percent_button"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25%"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginRight="9dp"
            android:id="@+id/twentyfive_percent_button"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amt_details"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_margin="15dp"
        android:layout_below="@id/percent_group"
        android:id="@+id/tip_amount"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tip_amount"
        android:layout_below="@id/percent_group"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="30sp"
        android:id="@+id/tip_amount_val"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_with_tip_details"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_margin="15dp"
        android:layout_below="@id/tip_amount"
        android:id="@+id/total_with_tip"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/total_with_tip"
        android:layout_below="@id/tip_amount"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="30sp"
        android:id="@+id/total_with_tip_val"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/guests_details"
        android:fontFamily="sans-serif-black"
        android:layout_below="@id/total_with_tip"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:id="@+id/guests"
        />
    <Spinner
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/total_with_tip"
        android:layout_toRightOf="@id/guests"
        android:id="@+id/guest_spinner">

    </Spinner>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_details"
        android:layout_alignParentRight="true"
        android:layout_below="@id/guests"
        android:layout_margin="15dp"
        />




</RelativeLayout>